--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <p data-start="215" data-end="686">Marbella, the crown jewel of Spain's Costa del Sol, has long been synonymous with glamour, sunshine, and luxury living. From the iconic Golden Mile to the serene hillsides of Sierra Blanca, marbella house for sale continue to attract buyers from around the world. But with so many options on the market, finding the right property requires more than just browsing listings. This guide will help you navigate the essentials when looking for <a href="https://3saestate.com/for-sale/">Marbella villas for sale.</a></p>
 
 <h2 data-start="688" data-end="720">1. Understanding the Market</h2>
-<p data-start="721" data-end="1084">Marbella's property market is resilient and dynamic. Demand is driven by international buyers, especially from Northern Europe, the Middle East, and increasingly North America. Villas in prime locations—like the Golden Mile, Puerto Banús, and Nueva Andalucía—tend to command premium prices due to their proximity to beaches, golf courses, and vibrant nightlife.</p>
-<p data-start="1086" data-end="1407">For those seeking a quieter lifestyle, areas like East Marbella and Benahavís offer more space, modern developments, and slightly more competitive prices without sacrificing luxury. Before beginning your search, it's important to define your budget and understand how far it will stretch in different parts of Marbella.</p>
+<p data-start="721" data-end="1084">Marbella's property market is resilient and dynamic. Demand is driven by international buyers, especially from Northern Europe, the Middle East, and increasingly North America. Villas in prime locations-like the Golden Mile, Puerto Banus, and Nueva Andalucia-tend to command premium prices due to their proximity to beaches, golf courses, and vibrant nightlife.</p>
+<p data-start="1086" data-end="1407">For those seeking a quieter lifestyle, areas like East Marbella and Benahavis offer more space, modern developments, and slightly more competitive prices without sacrificing luxury. Before beginning your search, it's important to define your budget and understand how far it will stretch in different parts of Marbella.</p>
 
 <h2 data-start="1409" data-end="1445">2. Location, Location, Location</h2>
 <p data-start="1446" data-end="1565">Choosing the right neighborhood is as important as the villa itself. Each area of Marbella offers a unique lifestyle:</p>
@@ -13,7 +13,7 @@
 <p data-start="1569" data-end="1746"><strong data-start="1569" data-end="1585">Golden Mile:</strong> Known for prestige, exclusivity, and proximity to designer boutiques and five-star resorts. Villas here often feature direct beach access and panoramic views.</p>
 </li>
  	<li data-start="1747" data-end="1921">
-<p data-start="1749" data-end="1921"><strong data-start="1749" data-end="1769">Nueva Andalucía:</strong> Popular among golf enthusiasts, with modern villas overlooking championship courses. The area is family-friendly yet close to Puerto Banús nightlife.</p>
+<p data-start="1749" data-end="1921"><strong data-start="1749" data-end="1769">Nueva Andalucia:</strong> Popular among golf enthusiasts, with modern villas overlooking championship courses. The area is family-friendly yet close to Puerto Banus nightlife.</p>
 </li>
  	<li data-start="1922" data-end="2081">
 <p data-start="1924" data-end="2081"><strong data-start="1924" data-end="1942">Sierra Blanca:</strong> Nestled in the hills, offering privacy, large plots, and breathtaking views of the Mediterranean. Perfect for those seeking tranquility.</p>
@@ -60,4 +60,5 @@
 <p data-start="4128" data-end="4427">Finally, choosing a trustworthy real estate agent is vital. Look for agencies with international networks, deep local knowledge, and a reputation for personalized service. An experienced agent can introduce you to off-market villas, guide you through negotiations, and ensure a smooth transaction.</p>
 
 <h2 data-start="4429" data-end="4444">Conclusion</h2>
-<p data-start="4445" data-end="4842">Buying an exclusive villa in Marbella is more than acquiring a property—it's securing a lifestyle. Whether you envision mornings by the pool, afternoons on the golf course, or evenings along the Golden Mile, Marbella offers something for everyone. By understanding the market, choosing the right location, and working with experts, you can turn the dream of owning a Marbella villa into reality.</p>
+
+<p data-start="4445" data-end="4842">Buying an exclusive villa in Marbella is more than acquiring a property-it's securing a lifestyle. Whether you envision mornings by the pool, afternoons on the golf course, or evenings along the Golden Mile, Marbella offers something for everyone. By understanding the market, choosing the right location, and working with experts, you can turn the dream of owning a Marbella villa into reality.</p>
